import React from 'react';
import {StaticRouter as Router} from 'react-router-dom';
import renderer from 'react-test-renderer';
import {configure, shallow} from 'enzyme';
import Adapter from 'enzyme-adapter-react-16';

import {BASE_HOST} from '../../../config/api-endpoints';
import Route from '../../../config/routes';

import UserBlock from './user-block';

configure({adapter: new Adapter()});

const mockUser = {
  avatar_url: '/wtw/static/avatar/10.jpg', // eslint-disable-line
  id: 777,
  email: `test@test.com`,
  name: `Nastasha Romanenko`,
};

const location = {
  pathname: Route.INDEX
};


describe(`UserBlock test suite.`, () => {
  it(`<UserBlock /> should render correctly`, () => {
    const tree = renderer.create(<Router><UserBlock user={mockUser} {...{location}} /></Router>).toJSON();
    expect(tree).toMatchSnapshot();
  });

  it(`should contain a link to sign-in page if a user is not logged in`, () => {
    const wrapper = shallow(<UserBlock user={null} {...{location}} />);
    const link = wrapper.find(`Link`);

    expect(link).toHaveLength(1);
    expect(link.prop(`to`)).toEqual(Route.SIGN_IN);
  });

  it(`should show the user's avatar if they are logged in`, () => {
    const wrapper = shallow(<UserBlock user={mockUser} {...{location}} />);

    expect(wrapper.find(`img`).prop(`src`)).toEqual(`${BASE_HOST}${mockUser.avatar_url}`);
  });
});
